# blas-from-scratch-in-rust

./: .gitignore  Cargo.toml  README.md
benches/: dot_bench.rs  saxpy_bench.rs  snrm2_bench.rs
src/: lib.rs  main.rs
src/level1/: axpy.rs  dot.rs  mod.rs  nrm2.rs  stdot.rs
src/level2/: sgemv.rs
