[package]
name = "blas-from-scratch-in-rust"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stdot_bench"
harness = false

[[bench]]
name = "saxpy_bench"
harness = false

[[bench]]
name = "snrm2_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
